# scratchpad

./: README.md
vertex-ai/pipelines/: pyproject.toml
vertex-ai/pipelines/simple_pipeline/: example_default_credentials.py  simple_pipeline.py
vertex-ai/pipelines/utils/: context_managers.py
